syntax = "proto3";

//import "carla_server.proto";

option java_multiple_files = true;
option java_package = "org.eclipse.mosaic.fed.carla.grpc";
option java_outer_classname = "CarlaLink";

package org.eclipse.mosaic.fed.carla.grpc;

// The greeting service definition.
service CarlaLinkService {  
  rpc GetActor (ActorRequest) returns (Vehicle) {}
  rpc GetDepartedIDList (Empty) returns (DepartedActors) {}
  rpc GetArrivedIDList (Empty) returns (ArrivedActors) {}
  rpc AddVehicle (Vehicle) returns (Empty) {}
  rpc RemoveVehicle (Vehicle) returns (Empty) {}
  rpc UpdateVehicle (Vehicle) returns (Empty) {}
  rpc SimulationStep (Step) returns (StepResult) {}

  rpc GetTrafficLight (LandmarkRequest) returns (TrafficLight) {}
  rpc GetTrafficLightIDList (Empty) returns (TrafficLights) {}
  rpc UpdateTrafficLight (TrafficLight) returns (Empty) {}
}

message Step {

}

message StepResult {
    repeated SpawnRequest add_actors = 1;
    repeated DestroyRequest remove_actors = 2;
    repeated MoveRequest move_actors = 3;
    repeated TrafficLight traffic_light_updates = 4;
}

message ActorRequest {
  string actor_id = 1;
}

message SpawnRequest {
  string actor_id = 1;
  string route = 2;
  string type_id = 3;
  string class_id = 4;
  string color = 5;
  double length = 6;
  double width = 7;
  double height = 8;
}

message DestroyRequest {
  string actor_id = 1;
}

message MoveRequest {
  string actor_id = 1;
  double loc_x = 2;
  double loc_y = 3;
  double loc_z = 4;
  double yaw = 5;
  double slope = 6;
  int32 keep_route = 7;
  int32 signals = 8;
}

message Location {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Rotation {
  double slope = 1;
  double angle = 2;
}

message Vehicle {
  string id = 1;
  string type_id = 2;
  string vclass = 3;
  string color = 4;
  
  string length = 5;
  string width = 6;
  string height = 7;
  
  Location location = 8;
  Rotation rotation = 9;
  
  int32 signals = 10;
}

message DepartedActors {
  repeated Vehicle actors = 1;
}

message ArrivedActors {
  repeated Vehicle actors = 1;
}

message Empty {

}

message LandmarkRequest {
    string landmark_id = 1;
}

message TrafficLight {
    string landmark_id = 1;
    string state = 2;
}

message TrafficLights {
  repeated TrafficLight traffic_lights = 1;
}
